Add JVM Phantom mode and ImGui launcher